# text_profanity_process

./: Cargo.toml
data/: readme.md
data/dictionaries/english/: alphabetic_unicode.json  readme.md
data/dictionaries/vietnamese/: dictionary_extract.py  readme.md  remove_accents.py  vi_50k_no_accent.txt  words_alpha.txt
data/emojis/: combined_emoji.json  combined_emoji_vi.json  unicode_emoji_vi.json
data/emoticons_emojis/: swear_word_emoji_from_emojidb.json  unicode_emoji.json
data/english/: readme.md
data/jigsaw-toxic-comment-classification-challenge/: sub_data.py  sub_train.csv
data/trainning_dataset/jigsaw-toxic-comment-classification-challenge/: sub100_train.csv  sub1k_train.csv  sub_data.py  sub_train.csv
data/wikipedia_shortcuts/: wiki_shortcuts.json
src/: emojis.rs  lib.rs  main.rs  other_patterns.rs  process_text.rs  unicode.rs  urls.rs
src/emojis/: mod.rs
src/other_patterns/: mod.rs
src/profanity/: readme.md
src/spelling_corrector/: mod.rs
src/unicode/: mod.rs
src/urls/: mod.rs
src/utils/: mod.rs
