[package]
name = "preprocess"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
deunicode = "1.6.0"
emojis = "0.6.2"
linkify = "0.10.0"
once_cell = "1.19.0"
polars = { version = "0.40.0", features = ["lazy", "strings", "regex"] }
regex = "1.10.5"
rust-stemmers = "1.2.0"
serde = "1.0.203"
serde_json = "1.0.118"
symspell = "0.4.3"
unicode-blocks = "0.1.9"
unicode-normalization = "0.1.23"
unicode-properties = "0.1.1"
unicode-segmentation = "1.11.0"
